--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/mx730129/auto-workflow-JD.com-jdcoin.git"
+          source_repo: "https://github.com/mxf007/tesjdcoin.git"
           source_branch: "master"
           destination_branch: "main"
           github_token: ${{ secrets.PAT || github.event.client_payload.PAT }}
